# kfplusplus

./: CMakeLists.txt  CMakePresets.json  README.md
bindings/: bindings.cpp
examples/: CMakeLists.txt
examples/linear_kf_control_example/: CMakeLists.txt  linear_kf_control_example.cpp
examples/linear_kf_no_control_example/: CMakeLists.txt  linear_kf_no_control_example.cpp
examples/nonlinear_analysis_example/: CMakeLists.txt  nonlinear_analysis_example.cpp  nonlinear_analysis_example.py
examples/nonlinear_kf_example/: CMakeLists.txt  nonlinear_kf_example.cpp
include/: kfplusplus.h  linalg.h
src/: extended_kf.cpp  kfplusplus.cpp  linear_kf.cpp  matrix.cpp  vector.cpp
test/: CMakeLists.txt  test_extended_kf.cpp  test_hello.cpp  test_linear_kf.cpp  test_matrix.cpp  test_vector.cpp
